# crypto-trading-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/crypto_mcp/: exceptions.py  http_handler.py  server.py  utils.py
src/crypto_mcp/exchanges/: base.py  binance.py  factory.py  gateio.py  upbit.py
src/crypto_trading_mcp/: __init__.py  exceptions.py  server.py
src/crypto_trading_mcp/exchanges/: base.py  binance.py  factory.py  gateio.py  upbit.py
tests/: conftest.py  test_binance.py  test_gateio.py  test_requester.py  test_upbit.py  test_utils.py
